detailsScreen,bookmarked added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-
-
-
-
+  bloc:
+  flutter_slidable: ^2.0.0
+  lottie: ^2.3.2
+  fluttertoast: ^8.2.1
+  simple_animations: ^4.2.0
+  supercharged: ^2.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
